# weather-classification

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
config/: train.yaml
demo/: inference.ipynb
models/: EfficientNet.torchscript
notebooks/: prepare-data.ipynb  train-model.ipynb
weather_classification/: __init__.py  config.py  cuda_utils.py  custom_callbacks.py  model_utils.py  pl_data.py  pl_model.py
weather_classification/types/: enums.py
