[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "weather-classification"
version = "0.1.0"
description = "Weather classification project."
authors = ["Svechnikar Daniil <https://github.com/DanilSvechnikar>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.5.1+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch-gpu-src"}


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.13.0"
clearml = "^1.16.5"
nbdime = "^4.0.2"
pre-commit = "^4.0.1"
nbstripout = "^0.7.1"
flake8 = "^7.1.1"
lightning = "^2.4.0"
notebook = "^7.2.2"
tensorboard = "^2.18.0"
seaborn = "^0.13.2"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.black]
# https://black.readthedocs.io/en/stable/index.html
target-version = ["py312"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''


[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 312
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true


[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.12
pretty = true
show_traceback = true
color_output = true
exclude = ['tests', '.venv']

allow_redefinition = false
check_untyped_defs = false
disallow_any_generics = true
disallow_incomplete_defs = false
ignore_missing_imports = false
implicit_reexport = false
no_implicit_optional = false
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = false
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.mypy-ultralytics]
ignore_missing_imports = true
