[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "weather-classification"
version = "0.1.0"
description = "Weather classification project."
authors = ["Svechnikar Daniil <https://github.com/DanilSvechnikar>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.5.1+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch-gpu-src"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
isort = "^5.13.2"
mypy = "^1.13.0"
ruff = "^0.7.1"
nbdime = "^4.0.2"
nbstripout = "^0.7.1"
notebook = "^7.2.2"
clearml = "^1.16.5"
lightning = "^2.4.0"
tensorboard = "^2.18.0"
seaborn = "^0.13.2"
split-folders = "^0.5.1"
hydra-core = "^1.3.2"
ipywidgets = "^8.1.5"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
py_version = 312
profile = "black"
color_output = true
lines_after_imports = 2


[tool.ruff]
# https://docs.astral.sh/ruff/
target-version = "py312"
extend-exclude = [".idea"]
fix = true


[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]

ignore = [
    "B904", # use 'raise ... from err'
    "B905", # use explicit 'strict=' parameter with 'zip()'
]

unfixable = [
    "ERA", # do not autoremove commented out code
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    # Import using an asterisk
    "F403",
]


[tool.ruff.format]
# https://docs.astral.sh/ruff/formatter/
quote-style = "double"


[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = 3.12
pretty = true
show_traceback = true
color_output = true
exclude = [".venv", ".git", ".idea"]

ignore_missing_imports = false
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
show_column_numbers = true
show_error_context = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "torch",
]
ignore_missing_imports = true
